--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ PORT=3000
 NODE_ENV=development
 
 # Configurações do MongoDB (opcional)
-MONGODB_URI=mongodb+srv://admin:BQMsUlOdcMYi1fnl@cluster0.uzcartt.mongodb.net/tarefas_db?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://admin:ozYHXA2FJGBsH9zo@apphibrido.qfaaz8b.mongodb.net/?appName=AppHibrido
 
 
 
