--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "dotenv": "^16.6.1",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "method-override": "^3.0.0",
     "mongodb": "4.1",
-    "mongoose": "^7.8.7"
+    "mongoose": "^7.8.7",
+    "morgan": "^1.10.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
